--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta name="description" content="Jonas Engberg's Portfolio App" />
-    <title>Portfolio - Jonas Engberg</title>
+    <title>Jonas Engberg - Portfolio</title>
   </head>
 
   <!-- Start Single Page Apps for GitHub Pages -->
