--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="/portfolio/build/bundle.js"></script>
+    <!-- <script src="/portfolio/build/bundle.js"></script> -->
   </body>
 </html>
